# libsocks

./: CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  conanfile.txt
cmake/: sanitizers.cmake
examples/: CMakeLists.txt
examples/relay_with_incoming_connect/: CMakeLists.txt
examples/relay_with_incoming_connect/coro_echo_server/: CMakeLists.txt  main.cpp
examples/relay_with_incoming_connect/coro_socks5_echo_client/: CMakeLists.txt  main.cpp
examples/relay_with_incoming_connect/socks5_proxy/: CMakeLists.txt  main.cpp
examples/tcp_relay/: CMakeLists.txt
examples/tcp_relay/async_socks5_echo_client/: CMakeLists.txt  main.cpp
examples/tcp_relay/coro_echo_server/: CMakeLists.txt  main.cpp
examples/tcp_relay/coro_socks5_echo_client/: CMakeLists.txt  main.cpp
examples/tcp_relay/socks5_proxy/: CMakeLists.txt  main.cpp
examples/tcp_relay/socks5_proxy_with_auth/: CMakeLists.txt  main.cpp
examples/tcp_relay/socks5_proxy_with_data_processor/: CMakeLists.txt  main.cpp
examples/tcp_relay/socks5_proxy_with_handler/: CMakeLists.txt  main.cpp
examples/tcp_relay/socks5_proxy_with_stateful_data_processor/: CMakeLists.txt  main.cpp
examples/udp_relay/: CMakeLists.txt
examples/udp_relay/coro_socks5_echo_client/: CMakeLists.txt  main.cpp
examples/udp_relay/echo_server/: CMakeLists.txt  main.cpp
examples/udp_relay/socks5_proxy/: CMakeLists.txt
examples/udp_relay/socks5_proxy_with_data_processor/: CMakeLists.txt  main.cpp
examples/udp_relay/socks5_proxy_with_handler/: main.cpp  (+1 more)
src/client/: bind_handshake.cpp  bind_handshake.hpp  client.cpp  connect_handshake.cpp  connect_handshake.hpp  handshake.cpp  handshake.hpp  invokers.cpp  invokers.hpp  udp_associate_handshake.cpp  udp_associate_handshake.hpp
src/common/: addr_utils.cpp  addr_utils.hpp  address.cpp  datagram_buffer.cpp  defs.hpp  metrics.cpp  proto_builders.cpp  proto_builders.hpp  socks5_datagram_io.cpp  socks5_datagram_io.hpp  socks5_datagram_validator.hpp
src/error/: error.cpp
src/net/: connection_error.cpp  connection_error.hpp  io.hpp  tcp_connection.cpp  tcp_connection.hpp  udp_connection.cpp  udp_connection.hpp  utils.cpp  utils.hpp
src/parsers/: parsers.hpp
src/proto/: proto.hpp
src/serializers/: serializers.cpp  serializers.hpp
src/server/: handshake.cpp  handshake.hpp  listener.hpp  proxy.hpp  relay_data_processors.cpp  relay_data_processors.hpp  sent_relay_data.cpp  sent_relay_data.hpp  server.cpp  server_builder.cpp  tcp_relay.cpp  tcp_relay.hpp  udp_relay.cpp  udp_relay.hpp
src/utils/: buffer.cpp  logger.cpp  logger.hpp  opt_ref.hpp  string_utils.hpp  thread_pool.cpp  thread_pool.hpp  timeout.cpp  timeout.hpp  watchdog.cpp
tests/: CMakeLists.txt
tests/auth/client/: auth_options_test.cpp  user_auth_test.cpp
tests/auth/server/: user_auth_test.cpp
tests/client/: bind_handshake_test.cpp  client_test.cpp  connect_handshake_test.cpp  handshake_test.cpp  udp_associate_handshake_test.cpp
tests/common/: addr_utils_test.cpp  address_test.cpp  datagram_buffer_test.cpp  metrics_test.cpp  proto_builders_test.cpp  socks5_datagram_io_test.cpp  socks5_datagram_validator_test.cpp
tests/net/: connection_error_test.cpp  io_test.cpp  tcp_connection_test.cpp  udp_connection_test.cpp  utils_test.cpp
tests/parsers/: parsers_test.cpp
tests/serializers/: serializers_test.cpp
tests/server/: handshake_test.cpp  listener_test.cpp  proxy_test.cpp  sent_relay_data_test.cpp  server_test.cpp  tcp_relay_test.cpp  udp_relay_test.cpp
tests/test_utils/: assert_macro.hpp
tests/utils/: buffer_test.cpp  thread_pool_test.cpp  watchdog_test.cpp
(+32 files in other folders)
